Mock ADS drafts endpoints
